<resources>
    <string name="app_name">SheBangs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="welcome">"欢迎:"</string>
    <string name="invalid_username">用户名或密码有误</string>
    <string name="invalid_password">密码须大于5位</string>
    <string name="login">"登陆"</string>
    <string name="login_ing">"登陆中..."</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="getting_branch">获取分店信息...</string>
    <string name="get_branch_failed">获取分店信息失败</string>
    <string name="getting_guide">获取分店导购信息...</string>
    <string name="get_guide_failed">获取分店导购信息失败</string>
    <string name="getting_pay_case">获取支付方式...</string>
    <string name="get_pay_case_failed">获取支付方式失败</string>
    <string name="getting_goods_class">获取商品类别信息...</string>
    <string name="get_goods_class_failed">获取商品类别信息失败</string>
    <string name="login_guide_choice">请选择在岗收银员</string>
    <string name="nav_button_cashier">收银</string>
    <string name="nav_button_server">管理</string>
    <string name="nav_button_myStore">设置</string>
    <string name="nav_cashier_title">前台收银</string>
    <string name="nav_cashier_cashier">收银</string>
    <string name="nav_cashier_inventory">盘点</string>
    <string name="nav_cashier_inventory_query">盘点查询</string>
    <string name="nav_cashier_receiver">收货</string>
    <string name="nav_cashier_transfer_in">调入货</string>
    <string name="nav_cashier_transfer_out">调出货</string>
    <string name="nav_cashier_bill_query">小票查询</string>
    <string name="nav_cashier_vip_query">会员查询</string>
    <string name="nav_cashier_sales_query">销售记录查询</string>
    <string name="nav_cashier_sales_statistics">每日销售统计</string>
    <string name="nav_cashier_remittance">汇款登记</string>
    <string name="nav_cashier_order_submit">工单提交</string>
    <string name="nav_back_store_manager">店铺管理</string>
    <string name="nav_back_store_staff_manager">店员管理</string>
    <string name="nav_back_store_inventory_classification">库存分类</string>
    <string name="nav_back_store_inventory_details">库存明细</string>
    <string name="nav_back_store_returns">店铺返货</string>
    <string name="nav_back_financial_declaration">财务申报</string>
    <string name="nav_back_financial_rent_registration">房租登记</string>
    <string name="nav_back_financial_wages_registration">工资登记</string>
    <string name="nav_back_vip_manager">会员管理</string>
    <string name="nav_back_vip_user">会员用户</string>
    <string name="nav_back_vip_integral_record">积分记录</string>
    <string name="nav_back_vip_integral_consume_record">积分消费记录</string>
    <string name="nav_back_vip_integral_detailed">积分明细</string>
    <string name="nav_back_book_manager">订货管理</string>
    <string name="nav_back_book_overbook">下单订货</string>
    <string name="nav_back_book_order">店铺订单</string>
    <string name="nav_back_query_statistics">查询统计</string>
    <string name="nav_back_query_management">经营数据概览</string>
    <string name="nav_back_query_sale_ranking">货号销售排行</string>
    <string name="nav_back_query_sale_statistics">货类销售统计</string>
    <string name="nav_back_query_best_seller_single">畅销款单品</string>
    <string name="nav_back_query_best_seller_class">畅销款类别</string>
    <string name="nav_myStore_device_manager">设备管理</string>
    <string name="nav_myStore_printer">打印机</string>
    <string name="nav_myStore_scanner">扫描头</string>
    <string name="nav_myStore_setting">设置</string>
    <string name="goods_id">货号</string>
    <string name="goods_sale_price">售价</string>
    <string name="goods_class_id">货物类型编号</string>
    <string name="goods_class">货物类型</string>
    <string name="goods_describe">商品描述</string>
    <string name="goods_status">状态</string>
    <string name="goods_stock">库存</string>
    <string name="goods_price">￥</string>
    <string name="goods_num">数量</string>
    <string name="goods_in_warehouse_time">入库时间</string>
    <string name="goods_scan_time">扫描时间</string>
    <string name="goods_id_valid">无效货号</string>
    <string name="vip_name">会员名</string>
    <string name="vip_tel">会员手机号码</string>
    <string name="guide_name">导购姓名</string>
    <string name="bill_type_mismatch">业务单类型不匹配</string>
    <string name="bill_format_error">业务单格式错误</string>
    <string name="bill_query_error">获取服务器单数据失败</string>
    <string name="bill_draft_error">业务单保存为草稿失败</string>
    <string name="cashier_label">前台收银</string>
    <string name="cashier_text_code">条形码:</string>
    <string name="cashier_text_cash">收银</string>
    <string name="cashier_repeat_item">重复商品</string>
    <string name="cashier_list_code">条形码</string>
    <string name="cashier_list_type">类名</string>
    <string name="cashier_list_price">单价</string>
    <string name="cashier_list_num">数量</string>
    <string name="cashier_list_stock">库存</string>
    <string name="cashier_list_item_delete">删除</string>
    <string name="cashier_list_item_query">查看</string>
    <string name="stockTotalNotEnough">库存不足</string>
    <string name="cashier_cash_payment">收银结算</string>
    <string name="cashier_cash_cashier">销售员</string>
    <string name="cashier_goods_num">数量：</string>
    <string name="cashier_goods_price_total">总价：</string>
    <string name="settlement_label">收银台</string>
    <string name="settlement_detailed_label">收银明细</string>
    <string name="settlement_text_vipId">vip会员</string>
    <string name="settlement_text_integral">使用积分</string>
    <string name="settlement_pay_case">付款方式</string>
    <string name="settlement_settlement_cash">结算收银</string>
    <string name="settlement_text_payment">实付:</string>
    <string name="settlement_text_change">找零:</string>
    <string name="settlement_text_bill">账单明细</string>
    <string name="input_settlement_cash">请输入结算金额</string>
    <string name="input_exchange_integral">请输入兑换积分</string>
    <string name="settlement_actualPayment_error">实付金额小于应付金额</string>
    <string name="settlement_exchange_error">可兑换积分不足</string>
    <string name="input_settlement_phone">请输入会员电话号码</string>
    <string name="vip_integral">积分</string>
    <string name="vip_integral_deduction">可抵扣￥</string>
    <string name="settlement_print_bill">小票打印</string>
    <string name="settlement_submit_print">收银成功，是否打印小票！</string>
    <string name="settlement_store_name">店铺名</string>
    <string name="settlement_vip_name">会员</string>
    <string name="settlement_buy_integral">本次积分</string>
    <string name="settlement_consume_integral">消费积分</string>
    <string name="settlement_surplus_integral">剩余积分</string>
    <string name="settlement_collection">收款金额</string>
    <string name="settlement_receivable">应收金额</string>
    <string name="settlement_total">收款合计</string>
    <string name="settlement_deduction">积分抵扣</string>
    <string name="settlement_detailed">商品明细</string>
    <string name="settlement_success_title">结算成功</string>
    <string name="settlement_success_finish">本次结算完成，是否开始新的收银</string>
    <string name="settlement_goods_total">合计：</string>
    <string name="cashier_old_sale">旧货销售</string>
    <string name="cashier_old_class">物品类别:</string>
    <string name="cashier_old_id">无码旧货</string>
    <string name="cashier_old_num">数量:</string>
    <string name="cashier_old_price">单价:</string>
    <string name="cashier_old_yes">确\t\t\t\t定</string>
    <string name="receipt_title">怦然心动连锁服饰\n</string>
    <string name="receipt_subtitle">收银小票\n</string>
    <string name="receipt_code">小票编号：</string>
    <string name="receipt_complaints_hotline">投诉电话：</string>
    <string name="receipt_guider">导 购 员：</string>
    <string name="receipt_print_time">打印时间：</string>
    <string name="receipt_goods_name">品名</string>
    <string name="receipt_goods_num">数量</string>
    <string name="receipt_goods_price">单价</string>
    <string name="receipt_num_total">合计数量：</string>
    <string name="receipt_price_total">合计金额：</string>
    <string name="receipt_Collection">收款：</string>
    <string name="receipt_give_change">找零：</string>
    <string name="receipt_vip_tel">会员手机号码：</string>
    <string name="receipt_sale_integral">本次积分：</string>
    <string name="receipt_consume_integral">消费积分：</string>
    <string name="receipt_offset_cash">抵扣现金：</string>
    <string name="receipt_surplus_integral">剩余积分：</string>
    <string name="receipt_warning">千万注意：</string>
    <string name="receipt_back_term">★此单商品退换货最后期限是</string>
    <string name="receipt_back_condition">★退换货须同时具备以下条件：</string>
    <string name="receipt_back_condition1">●出示购买时的收银小票</string>
    <string name="receipt_back_condition2">●所退还商品不影响再次销售</string>
    <string name="receipt_back_condition3">●所退换商品未经穿着、未见水、未弄脏、无损坏、吊牌未摘除</string>
    <string name="receipt_address">地址：</string>
    <string name="receipt_print_division">--------------------------------\n</string>
    <string name="transfer_goods_code">调货条码:</string>
    <string name="transfer_form_shop">调出店铺</string>
    <string name="transfer_to_shop">调入店铺</string>
    <string name="transfer_start_transfer">发起调货</string>
    <string name="transfer_query">调货查询</string>
    <string name="transfer_status">调货状态</string>
    <string name="transfer_receive_shop">接收店铺</string>
    <string name="transfer_transfer_id">编号:</string>
    <string name="transfer_transfer_type">类型:</string>
    <string name="transfer_transfer_code">条码:</string>
    <string name="transfer_old">旧货调拨</string>
    <string name="transfer_batch_yes">调货批量确认</string>
    <string name="inventory_label">盘点</string>
    <string name="inventory_query_label">盘点查询</string>
    <string name="inventory_history_label">盘点草稿</string>
    <string name="inventory_take_label">盘点结果</string>
    <string name="inventory_query">盘点查询</string>
    <string name="inventory_is">是否盘点</string>
    <string name="purchase_status">进货状态</string>
    <string name="seasonal">季节装</string>
    <string name="delivery_time">发货时间</string>
    <string name="code_id">条码编号</string>
    <string name="bill_id">小票编号</string>
    <string name="bill_query_tips">默认查询最后一次成功销售的货物（有条码）数据！</string>
    <string name="navigation_branch_vip">分店会员积分</string>
    <string name="navigation_vip_integral">积分消费记录</string>
    <string name="consume_time">消费时间</string>
    <string name="sale_record_today">今天</string>
    <string name="sale_record_yesterday">昨天</string>
    <string name="sale_record_week">本周</string>
    <string name="sale_record_month">本月</string>
    <string name="sale_record_other">其他</string>
    <string name="query_goods">商品信息查询中...</string>
    <string name="query_goods_failed">查询商品信息失败</string>
    <string name="printer_label">打印机设置</string>
    <string name="printer_title">打印机</string>
    <string name="printer_linking">打印机连接中...</string>
    <string name="printer_linked">打印机已连接</string>
    <string name="printer_scanning">打印机扫描中...</string>
    <string name="printer_scan_finish">扫描完成</string>
    <string name="printer_test">打印测试</string>
    <string name="printer_no_link">未连接打印机，请先连接</string>
    <string name="printer_bill">票据打印机</string>
    <string name="printer_code">条码打印机</string>
    <string name="printer_cpcl">单面打印机</string>
    <string name="printer_wifi_title">WIFI打印机</string>
    <string name="printer_wifi_describe">当前可搜索附件的WiFi打印机</string>
    <string name="printer_bluetooth_title">蓝牙打印机</string>
    <string name="printer_bluetooth_describe_on">当前可搜索附件的蓝牙打印机</string>
    <string name="printer_bluetooth_describe_off">打开蓝牙以搜索附件的蓝牙打印机</string>
    <string name="title_paired_devices">已配对</string>
    <string name="title_other_devices">New</string>
    <string name="query">查询</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="to">至</string>
    <string name="clear">清空</string>
    <string name="supplier_id">编号</string>
    <string name="pay_type">付款方式</string>
    <string name="sale_time">销售时间</string>
</resources>