<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/goodsClass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:text="@string/goods_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/goodsClass" />

    <TextView
        android:id="@+id/supplierID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/supplier_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/supplierID" />

    <TextView
        android:id="@+id/vipTel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/vip_tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/vipTel" />

    <TextView
        android:id="@+id/codeID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/code_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/codeID" />

    <TextView
        android:id="@+id/goodsID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/goods_class_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/goodsID" />

    <TextView
        android:id="@+id/billID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/bill_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/billID" />

    <TextView
        android:id="@+id/guideName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/guide_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/guideName" />

    <TextView
        android:id="@+id/payType"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/pay_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/payType" />

    <TextView
        android:id="@+id/saleTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/sale_time"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/saleTimeTo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/to"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toEndOf="@+id/saleTime"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_blue"
        android:text="@string/query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>