<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/purchaseStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:text="@string/purchase_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/purchaseStatus" />

    <TextView
        android:id="@+id/seasonal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/seasonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/seasonal" />

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/supplier_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <TextView
        android:id="@+id/goodsClass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/goods_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/goodsClass" />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/delivery_time"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/deliveryTimeTo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/to"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toEndOf="@+id/delivery"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/deliveryTimeTo" />

    <TextView
        android:id="@+id/goodsID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/goods_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_layer_nesting_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/goodsID" />

    <TextView
        android:id="@+id/goodsSalePrice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:text="@string/goods_sale_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <Button
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/query"
        android:background="@drawable/shape_rectangle_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>